<resources>
    <string name="app_name">My Application</string>
    <string name="greeting_text">Hello, Android!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">W E L C O M E !</string>
    <string name="welcome_reg">R E G I S T E R !</string>
</resources>