<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/label_LG_LO"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:paddingTop="60dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/welcome" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/user_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextTextPassword2"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_lgn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_bg_login"
                    android:text="@string/login"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button_rgt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_bg_register"
                    android:text="@string/register"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/database"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_bg_register"
                    android:text="Database"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>